# medAlert

./: CMakeLists.txt  README-de.md  README-fr.md  README-it.md  README.md  appsettings.cpp  appsettings.h  apptranslator.cpp  apptranslator.h  main.cpp  mainwindow.cpp  mainwindow.h  medicinestore.cpp  medicinestore.h  notificationservice.cpp  notificationservice.h
systemd/: medalert.service  medalert.timer
